--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,7 @@
 body {
   background: white !important;
   font-family: Impact, Charcoal, sans-serif !important;
+  font-weight: 100;
 }
 
 nav {
@@ -24,19 +25,33 @@ nav {
   border-radius: 10px;
   padding: 10px;
   color: black;
-  //background-image: url("logo.png");
+  background-image: url("logo.png");
   background-repeat: no-repeat;
-  background-position: 650px -30px;
+  background-position: 400px -30px;
   background-size: 120px 150px;
 }
 
 small {
   color: black !important;
+  font-weight: 100;
 }
 
 main {
   background: white !important;
   font-weight:100;
+}
+section{
+  padding-left: 5px;
+}
+h1{
+  font-weight: 100;
+}
+ul {
+  list-style: none;
+  padding:0px;
+}
+h1.ng-binding {
+  font-weight: 100;
 }
 button {
   background: #c43b3a;
@@ -54,11 +69,14 @@ h2 {
   font-size:1.5em;
   font-weight:100;
 }
+h3{
+  font-weight: 100;
+}
 article {
   background: white;
 }
 
-[class=car-cards] {
+.car-cards > li {
   background: #d3d3d3;
   border-radius: 10px;
 }
