--- a/public/style.css
+++ b/public/style.css
@@ -39,6 +39,7 @@ img{
 small {
   color: black !important;
   font-weight: 100;
+    font-size: 65%;
 }
 
 main {
@@ -50,6 +51,8 @@ section{
 }
 h1{
   font-weight: 100;
+  display: flex;
+  flex-direction: column;
 }
 ul {
   list-style: none;
