--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 nav {
+  display: flex;
   background: #d3d3d3;
   border-radius: 10px;
   padding: 10px;
@@ -49,10 +50,12 @@ main {
 section{
   padding-left: 5px;
 }
-h1{
+nav h1{
   font-weight: 100;
   display: flex;
   flex-direction: column;
+  font-size: 2.5em;
+  margin-left: 10px;
 }
 ul {
   list-style: none;
