--- a/public/style.css
+++ b/public/style.css
@@ -176,6 +176,11 @@ aside {
     justify-content: center;
     align-items: center;
 }
+.logout {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
     display: none !important;
 }
